# grade-webapp

./: README.md  student-grade-analyzer-web.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
docs/: LearningGuide-GradeWebapp.md
src/: Analyzer.hs  Report.hs  SampleData.hs  Types.hs
src/Routes/: Common.hs  Filters.hs  JsonRows.hs  Records.hs  Report.hs
static/: index.html
static/css/: app.css
static/js/: filters.js  records.js  report.js
