cabal-version:      2.4
name:               student-grade-analyzer-web
version:            0.1.0.0
build-type:         Simple

executable student-grade-analyzer-web
    main-is:          Main.hs
    hs-source-dirs:   app, src
    default-language: Haskell2010
    ghc-options:      -Wall
    other-modules:
        Routes.Records
        Routes.Filters
        Routes.Report
        Types
    build-depends:
        base >=4.14 && <5,
        aeson,
        bytestring,
        http-types,
        scotty,
        text,
        wai-middleware-static
